# Butter-Bot

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/adr/: 001-runtime-model.md  002-update-model-managed-sections.md  003-delivery-working-tree.md  004-language-adapters-phased.md  005-style-engine.md  006-runbook-sources.md
docs/plan/: butter-bot-plan.md
docs/process/: branch-protection.md
docs/review/: A11-agent1-handoff.md  A11-agent2-review.md
src/butter_bot/: __init__.py
src/butter_bot/adapters/: __init__.py  base.py  docker.py  python.py  shell.py
src/butter_bot/core/: __init__.py  managed.py  scan.py
src/butter_bot/generators/: __init__.py  architecture.py  models.py  runbook.py
src/butter_bot/mcp/: __init__.py  server.py
src/butter_bot/style/: __init__.py  __main__.py  engine.py  markdown.py  models.py  rules.py
tests/: conftest.py  test_mcp_server.py  test_package.py
tests/adapters/: test_adapters.py
tests/core/: test_managed.py
tests/generators/: test_generators.py
tests/style/: test_engine.py  test_rules.py
